--- a/src/main/webapp/style/st4.css
+++ b/src/main/webapp/style/st4.css
@@ -2,7 +2,8 @@
 CSS for all JSP pages
 ***************************************************************/
 body {
-	margin: 0;
+	margin: 10;
+	background-color: red;
 }
 
 table {
