--- a/src/main/webapp/WEB-INF/jspf/footer.jspf
+++ b/src/main/webapp/WEB-INF/jspf/footer.jspf
@@ -1,7 +1,10 @@
 <%--=========================================================================== 
 Footer (bottom area). 
 ===========================================================================--%> 
+<%--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>--%>
 
-<tr>
-	<td id="footer">&copy;VIP Restaurant (ST4Example, EPAM-KNURE Java Training), 2013</td>
-</tr>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script>window.jQuery || document.write('<script src="${pageContext.request.contextPath}/static//js/jquery-slim.min.js"><\/script>')</script>
+<script src="${pageContext.request.contextPath}/static/js/popper.min.js"></script>
+<script src="${pageContext.request.contextPath}/static/js/bootstrap.min.js"></script>
+<script src="${pageContext.request.contextPath}/static/js/holder.min.js"></script>
