--- a/src/main/webapp/WEB-INF/jspf/headOLEG.jspf
+++ b/src/main/webapp/WEB-INF/jspf/headOLEG.jspf
@@ -10,8 +10,10 @@
 <%--=========================================================================== 
 Bind CSS document.
 ===========================================================================--%> 
-	<link type="text/css" rel="stylesheet" href="static/css/main.css">
-	
+	<link type="text/css" rel="stylesheet" href="${pageContext.request.contextPath}/static/css/main.css">
+    <link type="text/css" rel="stylesheet" href="${pageContext.request.contextPath}/static/css/bootstrap.min.css">
+    <link type="text/css" rel="stylesheet" href="${pageContext.request.contextPath}/static/css/album.css">
+
 <%--=========================================================================== 
 If you define http-equiv attribute, set the content type and the charset the same
 as you set them in a page directive.
