--- a/src/main/webapp/static/css/main.css
+++ b/src/main/webapp/static/css/main.css
@@ -1,18 +1,24 @@
+
 body {
-  background-image: url('../../static/images/periodical_index.jpeg');
-  background-position: center;
-  margin: 0px;
+    background-image: url('../../static/images/periodical_index.jpeg');
+    background-position: center;
+    background-repeat: no-repeat;
+    margin: 0px;
+    background-color: #7b8a95f2;
 }
+
 #headerOLEG {
     background-image: initial;
     background-color: rgb(52, 54, 53);
     width: 100%;
     height: 31px;
 }
+
 #leftHeaderOLEG {
     float: left;
     padding: 6px;
 }
+
 #rightHeaderOLEG {
     float: right;
     text-align: center;
@@ -20,12 +26,41 @@ body {
     padding: 6px;
     color: wheat;
 }
+
 a:link, a:visited {
     color: #ffffff;
 }
+
 a:hover {
     color: lightgrey;
 }
+
 a {
-  text-decoration: none;
+    text-decoration: none;
+}
+
+.col {
+    background-color: #cbcbd5;
+    margin: 5px;
+    border-radius: 5px;
+    border: black 1px solid;
+}
+
+.row {
+    margin: 5px;
+    border: black 1px solid;
+    border-radius: 5px;
+    background-color: #e1dfdd;
+    padding: 10px;
+}
+
+.theme-name {
+    width: 100%;
+    text-align: center;
+}
+
+.jumbo-wrapper {
+    width: 100%;
+    justify-content: center;
+    display: flex;
 }
