--- a/src/main/webapp/WEB-INF/jspf/headOLEG.jspf
+++ b/src/main/webapp/WEB-INF/jspf/headOLEG.jspf
@@ -10,9 +10,12 @@
 <%--=========================================================================== 
 Bind CSS document.
 ===========================================================================--%> 
-	<link type="text/css" rel="stylesheet" href="${pageContext.request.contextPath}/static/css/main.css">
-    <link type="text/css" rel="stylesheet" href="${pageContext.request.contextPath}/static/css/bootstrap.min.css">
-    <link type="text/css" rel="stylesheet" href="${pageContext.request.contextPath}/static/css/album.css">
+<%--	<link type="text/css" rel="stylesheet" href="${pageContext.request.contextPath}/static/css/main.css">--%>
+    <link rel="stylesheet" href="<c:url value="/static/css/main.css" />">
+<%--    <link type="text/css" rel="stylesheet" href="${pageContext.request.contextPath}/static/css/bootstrap.min.css">--%>
+    <link rel="stylesheet" href="<c:url value="/static/css/bootstrap.min.css" />">
+<%--    <link type="text/css" rel="stylesheet" href="${pageContext.request.contextPath}/static/css/album.css">--%>
+    <link rel="stylesheet" href="<c:url value="/static/css/album.css" />">
 
 <%--=========================================================================== 
 If you define http-equiv attribute, set the content type and the charset the same
