--- a/src/main/webapp/static/css/main.css
+++ b/src/main/webapp/static/css/main.css
@@ -100,3 +100,19 @@ a.disabled {
 .dropdown-filtering{
     float: left;
 }
+.container_by_themes{
+    margin-top: 30px;
+}
+.subscription_submit {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-content: center;
+}
+.login_form {
+    padding-top: 100px;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+}
