--- a/src/main/webapp/WEB-INF/jspf/head.jspf
+++ b/src/main/webapp/WEB-INF/jspf/head.jspf
@@ -10,11 +10,11 @@
 <%--=========================================================================== 
 Bind CSS document.
 ===========================================================================--%> 
-<%--	<link rel="stylesheet" type="text/css" media="screen" href="${pageContext.request.contextPath}style/st4.css"/>--%>
-<%--	<link type="text/css" rel="stylesheet" href="${pageContext.request.contextPath}static/css/main.css">--%>
-<%--    <link rel="stylesheet" href="<c:url value="/style/st4.css" />">--%>
-    <link rel="stylesheet" href="../../style/st4.css"/>
-<%--===========================================================================
+    <link rel="stylesheet" href="<c:url value="/static/css/main.css" />">
+    <link rel="stylesheet" href="<c:url value="/static/css/bootstrap.min.css" />">
+    <link rel="stylesheet" href="<c:url value="/static/css/album.css" />">
+
+<%--=========================================================================== 
 If you define http-equiv attribute, set the content type and the charset the same
 as you set them in a page directive.
 ===========================================================================--%> 
