--- a/src/main/webapp/WEB-INF/jspf/header.jspf
+++ b/src/main/webapp/WEB-INF/jspf/header.jspf
@@ -1,87 +1,44 @@
-<%--=========================================================================== 
-Header (top area). 
-===========================================================================--%> 
-
-<%@ page import="com.training.periodical.model.dao.Role" %>
 <%@ include file="/WEB-INF/jspf/directive/page.jspf" %>
 <%@ include file="/WEB-INF/jspf/directive/taglib.jspf" %>
 
-<tr>
-<td id="header">
+<div id="header">
 
-<c:if test="${not empty user}">
-<%--=========================================================================== 
-This is the user menu. 
-===========================================================================--%> 
+    <a class="home" href="index"><fmt:message key="header_jspf.anchor.home"/></a>
+    <c:if test="${not empty user}">
+        <div id="leftHeader">
+            <a href="view-settings">
+                <fmt:message key="header_jspf.anchor.settings"/>
+            </a> &nbsp;
+        </div>
+        <div id="rightHeader">
+            <a href="<c:if test="${not empty userRole}">
+                        <c:if test="${userRole.name eq 'admin'}">
+                            admin-cabinet
+                        </c:if>
+                        <c:if test="${userRole.name eq 'client'}">
+                            user-cabinet
+                        </c:if>
+                    </c:if>
 
-<div id="leftHeader">
+            ">
+                <c:out value="${user.firstName} ${user.lastName}"/>
+            </a>
+            <c:if test="${not empty userRole}">
+                <c:out value="(${userRole.name})"/>
+            </c:if>
+            <a href="logout">
+                <fmt:message key="header_jspf.anchor.logout"/>
+            </a>
 
-	<c:choose>
+        </div>
+    </c:if>
 
-<%--=========================================================================== 
-This way we define the ADMIN MENU. 
-===========================================================================--%> 
-		<c:when test="${userRole.name == 'admin' }">
-			<a href="controller?command=listOrders">
-				<fmt:message key="header_jspf.anchor.all_orders"/>
-			</a> &nbsp;
-		</c:when>
-
-		
-<%--=========================================================================== 
-This way we define the USER MENU.
-===========================================================================--%> 
-		<c:when test="${userRole.name == 'client'}">
-			<a href="controller?command=listMenu">
-				<fmt:message key="header_jspf.anchor.menu"/>
-			</a> &nbsp;
-		</c:when>
-	</c:choose>
-	
-<%--=========================================================================== 
-This way we define the settings anchor.
-===========================================================================--%> 
-	<a href="controller?command=viewSettings">
-		<fmt:message key="header_jspf.anchor.settings"/>
-	</a> &nbsp;
-
+    <c:if test="${empty user and title ne 'Login'}">
+        <div id="rightHeader">
+            <a href="login">
+                <fmt:message key="header_jspf.anchor.login"/>
+            </a>
+        </div>
+    </c:if>
 </div>
-
-<%--=========================================================================== 
-This way we define the menu located at the right of header. 
-===========================================================================--%> 
-<div id="rightHeader" >
-
-<%--=========================================================================== 
-Type user name if the user object is presented in the current session.  
-===========================================================================--%> 
-	<c:out value="${user.firstName} ${user.lastName}"/>
-	
-<%--=========================================================================== 
-Type user role name if the user object is presented in the current session.  
-===========================================================================--%> 
-	<c:if test="${not empty userRole}">
-		<c:out value="(${userRole.name})"/>
-	</c:if>
-
-<%--=========================================================================== 
-Type link to logout  
-===========================================================================--%> 
-	<a href="controller?command=logout">
-		<fmt:message key="header_jspf.anchor.logout"/>
-	</a> 	
-
-</div>
-</c:if>
-
-<c:if test="${empty user and title ne 'Login'}">
-	<div id="rightHeader">
-		<a href="login.jsp">
-			<fmt:message key="header_jspf.anchor.login"/>
-		</a>
-	</div>
-</c:if>
-
-	</td>
-</tr>
 
