--- a/src/main/webapp/static/css/main.css
+++ b/src/main/webapp/static/css/main.css
@@ -6,19 +6,19 @@ body {
     background-color: #7b8a95f2;
 }
 
-#headerOLEG {
+#header {
     background-image: initial;
     background-color: rgb(52, 54, 53);
     width: 100%;
-    height: 31px;
+    height: 35px;
 }
 
-#leftHeaderOLEG {
+#leftHeader {
     float: left;
     padding: 6px 6px 0px;
 }
 
-#rightHeaderOLEG {
+#rightHeader {
     float: right;
     text-align: center;
     margin-right: 10px;
@@ -132,4 +132,8 @@ a.disabled {
 }
 .price {
     text-align: center;
+}
+.home {
+    float: left;
+    padding: 6px 6px 0px 6px;
 }
