--- a/src/main/webapp/static/css/main.css
+++ b/src/main/webapp/static/css/main.css
@@ -18,7 +18,7 @@ body {
     padding: 4px 6px 0px;
 }
 
-#rightHeader {
+.rightHeader {
     float: right;
     text-align: center;
     margin-right: 10px;
@@ -33,11 +33,18 @@ body {
     justify-content: space-evenly;
     align-items: baseline;
 }
+
+.rightHeader.admin_header {
+    width: 360px;
+}
+
 .locale {
 }
+
 #login {
     width: 30px;
 }
+
 a:link, a:visited {
     color: #ffffff;
 }
@@ -69,56 +76,85 @@ a {
     width: 100%;
     text-align: center;
 }
-.main-container{
+
+.main-container {
     width: 100%;
     justify-content: center;
     display: flex;
 }
+
 .wrapper {
     width: 1165px;
     background-color: white;
     padding-bottom: 15px;
 }
+
 .wrapper-cabinet {
     margin-top: -20px;
     padding-bottom: 400px;
 }
+
+.wrapper-cabinet.admin {
+    margin-top: 0px;
+    padding-bottom: 400px;
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 1300px;
+    background-color: burlywood;
+}
+table.table.table-bordered.table_custom {
+    background-color: #627a97;
+}
+
 #make_order {
     margin-bottom: 0px;
 }
+
 .page_bar {
     width: 100%;
     text-align: center;
 }
-.active{
+
+.active {
     color: #1c1c9a !important;
 }
+
 .disabled {
     color: currentColor;
     cursor: not-allowed;
     opacity: 0.5;
     text-decoration: none;
 }
+
 a.disabled {
     pointer-events: none;
 }
+
 .sorting {
     width: 100%;
     margin: 5px;
 }
+
 .theme-name h3 {
     padding: 0px;
     margin: 0px;
 }
+
 .dropdown-custom {
     float: right;
 }
-.dropdown-filtering{
+
+.dropdown-filtering {
     float: left;
 }
-.container_by_themes{
+
+.container_by_themes {
     margin-top: 30px;
 }
+
 .subscription_submit {
     width: 100%;
     display: flex;
@@ -126,60 +162,74 @@ a.disabled {
     flex-direction: column;
     align-content: center;
 }
+
 .login_form {
     padding-top: 100px;
     display: flex;
     align-content: center;
     justify-content: center;
 }
+
 .col-custom {
     background-color: #9a7264;
 }
+
 .mag_image img {
     border-radius: 5px;
 }
-.mag_image{
+
+.mag_image {
     padding-top: 17px;
     padding-bottom: 17px;
 }
+
 .name {
     text-align: center;
     height: 70px;
 }
+
 .price {
     text-align: center;
 }
+
 .home {
     float: left;
     padding: 6px 11px 0px 19px;
     margin-top: -2px;
 }
+
 .dropdown_custom a.btn {
     font-size: 10px !important;
     padding: 3px;
     margin-top: -3px;
 }
+
 .dropdown-menu-custom.show {
     float: left;
     transform: translate3d(-30px, 23px, 0px) !important;
     min-width: 9rem;
 }
+
 form#settings_form {
     display: flex;
     flex-wrap: nowrap;
     flex-direction: column;
     align-items: center;
 }
-form#settings_form legend{
+
+form#settings_form legend {
     text-align: center;
 }
+
 fieldset.settings_lang {
     padding-bottom: 14px;
 }
+
 .lang_select {
     width: 233px;
     font-size: 23px;
 }
+
 body div#error_wrapper {
     padding-top: 100px;
     display: flex;
@@ -188,5 +238,10 @@ body div#error_wrapper {
     align-items: center;
     flex-direction: column;
     color: crimson !important;
+}
+
+.error {
+    color: crimson;
+    padding-bottom: 35px;
 }
 
