--- a/src/main/webapp/WEB-INF/jspf/header.jspf
+++ b/src/main/webapp/WEB-INF/jspf/header.jspf
@@ -7,13 +7,13 @@
 <c:url var="url_clean" value="${fn:replace(pageContext.request.requestURL, pageContext.request.requestURI, '')}/">
 </c:url>
 <div id="header">
-<%--    <div><h3>${url_clean}</h3></div>--%>
-<%--    <div><h3>${url_unclean}</h3></div>--%>
-<%--    <div><h3>${pageContext.request.requestURI}</h3></div>--%>
-    <a class="home" href="${url_clean}index"><fmt:message key="header_jspf.anchor.home"/></a>
-    <c:if test="${not empty user}">
+    <a class="home" href="${url_clean}index<c:if test='${not empty pre_sub_sort or not empty pre_sub_filter or not empty pre_sub_page}'>?</c:if><c:if test='${not empty pre_sub_sort}'>&sort=${pre_sub_sort}</c:if><c:if test='${not empty pre_sub_filter}'>&filter=${pre_sub_filter}</c:if><c:if test='${not empty pre_sub_page}'>&page=${pre_sub_page}</c:if>">
+        <fmt:message key="header_jspf.anchor.home"/>
+    </a>
+
+
+        <c:if test="${not empty user}">
         <div id="leftHeader">
-<%--            <a href="view-settings">--%>
                 <a href="${url_clean}view-settings">
                 <fmt:message key="header_jspf.anchor.settings"/>
             </a>
